// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/gitlab addAssignees(issueNo, assignees) should add the given assignees to the issue 1`] = `
Array [
  Array [
    "projects/undefined/merge_requests/42?assignee_id=123",
  ],
]
`;

exports[`platform/gitlab addAssignees(issueNo, assignees) should warn if more than one assignee 1`] = `
Array [
  Array [
    "projects/undefined/merge_requests/42?assignee_id=123",
  ],
]
`;

exports[`platform/gitlab commitFilesToBranch(branchName, files, message, parentBranch) creates file 1`] = `
Array [
  Array [
    "projects/undefined/repository/commits",
    Object {
      "body": Object {
        "actions": Array [
          Object {
            "action": "create",
            "content": "c29tZSBuZXctY29udGVudHM=",
            "encoding": "base64",
            "file_path": "some-new-file",
          },
        ],
        "branch": "renovate/something",
        "commit_message": "Create something",
        "start_branch": undefined,
      },
    },
  ],
]
`;

exports[`platform/gitlab commitFilesToBranch(branchName, files, message, parentBranch) updates multiple files 1`] = `
Array [
  Array [
    "projects/undefined/repository/commits",
    Object {
      "body": Object {
        "actions": Array [
          Object {
            "action": "update",
            "content": "dXBkYXRlZCBjb250ZW50",
            "encoding": "base64",
            "file_path": "some-existing-file",
          },
          Object {
            "action": "update",
            "content": "b3RoZXIgdXBkYXRlZCBjb250ZW50",
            "encoding": "base64",
            "file_path": "some-other-existing-file",
          },
        ],
        "branch": "renovate/something",
        "commit_message": "Update something",
        "start_branch": undefined,
      },
    },
  ],
]
`;

exports[`platform/gitlab createPr(branchName, title, body) returns the PR 1`] = `
Object {
  "branchName": "some-branch",
  "displayNumber": "Merge Request #12345",
  "id": 1,
  "iid": 12345,
  "number": 12345,
}
`;

exports[`platform/gitlab createPr(branchName, title, body) returns the PR 2`] = `
Array [
  Array [
    "projects/undefined/merge_requests",
    Object {
      "body": Object {
        "description": "the-body",
        "labels": null,
        "remove_source_branch": true,
        "source_branch": "some-branch",
        "target_branch": undefined,
        "title": "some-title",
      },
    },
  ],
]
`;

exports[`platform/gitlab createPr(branchName, title, body) uses default branch 1`] = `
Object {
  "branchName": "some-branch",
  "displayNumber": "Merge Request #12345",
  "id": 1,
  "iid": 12345,
  "number": 12345,
}
`;

exports[`platform/gitlab createPr(branchName, title, body) uses default branch 2`] = `
Array [
  Array [
    "projects/undefined/merge_requests",
    Object {
      "body": Object {
        "description": "the-body",
        "labels": "",
        "remove_source_branch": true,
        "source_branch": "some-branch",
        "target_branch": undefined,
        "title": "some-title",
      },
    },
  ],
]
`;

exports[`platform/gitlab getAllRenovateBranches() should return all renovate branches 1`] = `
Array [
  "renovate/a",
  "renovate/b",
]
`;

exports[`platform/gitlab getBranchLastCommitTime should return a Date 1`] = `2012-09-20T08:50:22.000Z`;

exports[`platform/gitlab getBranchPr(branchName) should return the PR object 1`] = `
Object {
  "additions": 1,
  "base": Object {
    "sha": "1234",
  },
  "body": undefined,
  "branchName": "some-branch",
  "canMerge": true,
  "commits": 1,
  "deletions": 1,
  "displayNumber": "Merge Request #91",
  "iid": 91,
  "number": 91,
  "source_branch": "some-branch",
}
`;

exports[`platform/gitlab getCommitMessages() returns commits messages 1`] = `
Array [
  "foo",
  "bar",
]
`;

exports[`platform/gitlab getFile(filePath, branchName) gets the file 1`] = `"~�"`;

exports[`platform/gitlab getFile(filePath, branchName) throws error for non-404 1`] = `
Object {
  "statusCode": 403,
}
`;

exports[`platform/gitlab getFileList should return the files matching the fileName 1`] = `
Array [
  "package.json",
  "some-dir/package.json.some-thing-else",
  "src/app/package.json",
  "src/otherapp/package.json",
]
`;

exports[`platform/gitlab getPr(prNo) returns the PR 1`] = `
Object {
  "body": "a merge request",
  "branchName": "some-branch",
  "canMerge": false,
  "canRebase": true,
  "description": "a merge request",
  "displayNumber": "Merge Request #12345",
  "id": 1,
  "iid": 12345,
  "isUnmergeable": true,
  "merge_status": "cannot_be_merged",
  "number": 12345,
  "source_branch": "some-branch",
  "state": "merged",
}
`;

exports[`platform/gitlab getPr(prNo) returns the PR with nonexisting branch 1`] = `
Object {
  "body": "a merge request",
  "branchName": "some-branch",
  "canMerge": false,
  "description": "a merge request",
  "displayNumber": "Merge Request #12345",
  "id": 1,
  "iid": 12345,
  "isUnmergeable": true,
  "merge_status": "cannot_be_merged",
  "number": 12345,
  "source_branch": "some-branch",
  "state": "open",
}
`;

exports[`platform/gitlab getRepos should return an array of repos 1`] = `
Array [
  Array [
    "projects?membership=true&per_page=100",
    Object {
      "paginate": true,
    },
  ],
]
`;

exports[`platform/gitlab getRepos should return an array of repos 2`] = `
Array [
  "a/b",
  "c/d",
]
`;

exports[`platform/gitlab getRepos should support a custom endpoint 1`] = `
Array [
  Array [
    "projects?membership=true&per_page=100",
    Object {
      "paginate": true,
    },
  ],
]
`;

exports[`platform/gitlab getRepos should support a custom endpoint 2`] = `
Array [
  "a/b",
  "c/d",
]
`;

exports[`platform/gitlab initRepo should escape all forward slashes in project names 1`] = `
Array [
  Array [
    "projects/some%2Frepo%2Fproject",
  ],
  Array [
    "user",
  ],
  Array [
    "projects/some%2Frepo%2Fproject/merge_requests?per_page=100",
    Object {
      "paginate": true,
    },
  ],
  Array [
    "projects/some%2Frepo%2Fproject/repository/tree?ref=undefined&recursive=true&per_page=100",
    Object {
      "paginate": true,
    },
  ],
]
`;

exports[`platform/gitlab initRepo should initialise the config for the repo - 0 1`] = `
Array [
  Array [
    "projects/some%2Frepo",
  ],
  Array [
    "user",
  ],
  Array [
    "projects/some%2Frepo/merge_requests?per_page=100",
    Object {
      "paginate": true,
    },
  ],
  Array [
    "projects/some%2Frepo/repository/tree?ref=undefined&recursive=true&per_page=100",
    Object {
      "paginate": true,
    },
  ],
]
`;

exports[`platform/gitlab initRepo should initialise the config for the repo - 0 2`] = `Object {}`;

exports[`platform/gitlab initRepo should initialise the config for the repo - 1 1`] = `
Array [
  Array [
    "projects/some%2Frepo",
  ],
  Array [
    "user",
  ],
  Array [
    "projects/some%2Frepo/merge_requests?per_page=100",
    Object {
      "paginate": true,
    },
  ],
  Array [
    "projects/some%2Frepo/repository/tree?ref=undefined&recursive=true&per_page=100",
    Object {
      "paginate": true,
    },
  ],
]
`;

exports[`platform/gitlab initRepo should initialise the config for the repo - 1 2`] = `Object {}`;

exports[`platform/gitlab initRepo should initialise the config for the repo - 2 1`] = `
Array [
  Array [
    "projects/some%2Frepo",
  ],
  Array [
    "user",
  ],
  Array [
    "projects/some%2Frepo/merge_requests?per_page=100",
    Object {
      "paginate": true,
    },
  ],
  Array [
    "projects/some%2Frepo/repository/tree?ref=undefined&recursive=true&per_page=100",
    Object {
      "paginate": true,
    },
  ],
]
`;

exports[`platform/gitlab initRepo should initialise the config for the repo - 2 2`] = `Object {}`;

exports[`platform/gitlab setBaseBranch(branchName) sets the base branch 1`] = `
Array [
  Array [
    "projects/undefined/repository/tree?ref=some-branch&recursive=true&per_page=100",
    Object {
      "paginate": true,
    },
  ],
]
`;
